--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -1,25 +1,23 @@
 
-
-<!--<app-create-topo *ngIf="isTopo==true"></app-create-topo>-->
-<!--<app-create-spot *ngIf="isSpot==true"></app-create-spot>-->
-<!--<app-create-area *ngIf="isAre==true"></app-create-area>-->
-<!--<app-create-road *ngIf="isRoad==true"></app-create-road>-->
+<div class="card-img-top">
+  <img src="assets/img/banner.jpg" class="img-fluid" alt="Responsive image">
+</div>
 
 
+<nav class="navbar navbar-fixed-top navbar-dark bg-dark">
+  <ul class="nav navbar-dark" routerLinkActive="active" a>
+    <li class="nav-item"><a class="nav-link" routerLink="/">Home </a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/topo/add-topo" >Créer un topo</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/myprofil">Profil</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/home">Token</a></li>
 
-    <nav class="navbar navbar-fixed-top navbar-dark bg-dark">
-      <div class="align-baseline">
-        <a class="navbar-brand">TrueSpot</a>
-        <ul class="nav navbar-dark" routerLinkActive="active" a>
-          <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/topo/add-topo" >Créer un topo</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/myprofil">Profil</a></li>
-          <li class="nav-item"><a class="nav-link" routerLink="/home">Token</a></li>
-        </ul>
-      </div>
-    </nav>
+    <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
+
+  </ul>
+</nav>
 
 <router-outlet></router-outlet>
+
