--- a/front/truespotFront/src/app/components/user/update-user/update-user.component.html
+++ b/front/truespotFront/src/app/components/user/update-user/update-user.component.html
@@ -1,3 +1,149 @@
-<p>
-  update-user works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="well-block">
+        <div class="well-title">
+
+          <div class="panel panel-primary">
+            <div class="panel-heading"><h3>Modifier votre profil utilisateur :</h3></div>
+            <div class="panel-body">
+
+              <form #f="ngForm" [formGroup]="forms" (ngSubmit)="updateUser()">
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="control-label">Prénom:</label>
+                      <input class="form-control"
+                             type="text"
+                             name="firstName"
+                             placeholder="Prénom"
+                             formControlName="firstName"
+                             required minlength="2">
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="control-label">Nom:</label>
+                      <input class="form-control input-md"
+                             type="text"
+                             name="lastName"
+                             placeholder="Nom"
+                             formControlName="lastName"
+                             required
+                             minlength="2">
+                    </div>
+                  </div>
+
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label for="email" class="control-label">Email:</label>
+                      <input required
+                             id="email"
+                             name="email"
+                             type="email"
+                             class="form-control"
+                             formControlName="email"
+                             placeholder="Email">
+                    </div>
+                  </div>
+
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label class="control-label">Age:</label>
+                      <input class="form-control input-md"
+                             type="number"
+                             name="Age"
+                             placeholder="age"
+                             formControlName="age"
+                             autocapitalize="on"
+                             spellcheck="on"
+                             required
+                             minlength="10">
+                    </div>
+                  </div>
+
+
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <label class="control-label">Numéro de téléphone:</label>
+                      <input class="form-control input-md"
+                             type="phoneNumber"
+                             name="phoneNumber"
+                             placeholder="Numéro de téléphone"
+                             formControlName="phoneNumber"
+                             required>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4">
+                    <label> Genre:</label>
+                    <div class="form-group">
+                      <div class="form-group">
+                        <label class="d-block">
+                          <input type="radio" class="mr-1" name="gender" value="Homme" formControlName="gender"> Homme
+                        </label>
+                        <label class="d-block">
+                          <input type="radio" class="mr-1" name="gender" value="Femme" formControlName="gender"> Femme
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="control-label">Pseudo: <span class="badge-danger rounded-circle" *ngIf="messagError">{{messagError}}</span></label>
+                      <input class="form-control input-md"
+                             type="text"
+                             name="pseudo"
+                             placeholder="Pseudo"
+                             formControlName="pseudo"
+                             required>
+                    </div>
+                  </div>
+
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="control-label">Mot de passe:</label>
+                      <input class="form-control input-md"
+                             type="password"
+                             name="password"
+                             placeholder="Mot de passe"
+                             formControlName="password"
+                             minlength="6"
+                             required>
+                    </div>
+                  </div>
+
+
+                  <!--            <div class="col-md-6">-->
+                  <!--              <label class="custom-file">-->
+                  <!--                <input id="upload"-->
+                  <!--                       type="file"-->
+                  <!--                       (change)="imageChange($event)"-->
+                  <!--                       />-->
+                  <!--                <span class="custom-file-control"></span>-->
+                  <!--              </label>-->
+                  <!--            </div>-->
+
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <button
+                        type="submit"
+                        class="btn btn-primary" [disabled]="forms.invalid">Mettre à jour votre profil
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
