--- a/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
@@ -62,9 +62,29 @@
     </div>
   </div>
 
+  <div class="card">
+    <div class="card-header">
+      <h3> Secteurs :</h3>
+    </div>
+      <div class="card-body">
+        <table class="table">
+          <tr>
+            <th>Nom du secteur</th>
+            <th>Orientation</th>
+            <th>Hauteur</th>
+            <th>Description</th>
+          </tr>
+          <tr *ngFor="let area of areas">
+            <td>{{area.name}}</td>
+            <td>{{area.orientation}}</td>
+            <td>{{area.height}}</td>
+            <td>{{area.description}}</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+  </div>
 
-
-</div>
 
 
 
