--- a/front/truespotFront/src/app/components/user/update-user/update-user.component.html
+++ b/front/truespotFront/src/app/components/user/update-user/update-user.component.html
@@ -51,16 +51,15 @@
 
                   <div class="col-md-4">
                     <div class="form-group">
-                      <label class="control-label">Age:</label>
+                      <label class="control-label">Date de Naissance:</label>
                       <input class="form-control input-md"
-                             type="number"
-                             name="Age"
-                             placeholder="age"
-                             formControlName="age"
+                             type="Date"
+                             name="Date de Naissance"
+                             placeholder="birthDate"
+                             formControlName="birthDate"
                              autocapitalize="on"
                              spellcheck="on"
-                             required
-                             minlength="10">
+                             required/>
                     </div>
                   </div>
 
