--- a/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
+++ b/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
@@ -35,7 +35,7 @@
 
                       <div class="col-md-3">
                         <h5 class="card-title">Date de naissance : </h5>
-                        <p class="card-text">{{user.age}}</p>
+                        <p class="card-text">{{user.birthDate | date:'dd/MM/yyyy'}}</p>
                       </div>
                     </div>
                     <br>
