Fix Controller, Fix Repo Query, Refactor ViewTopo

--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-fixed-top navbar-dark bg-dark">
   <ul class="nav navbar-dark" routerLinkActive="active" a>
-    <li class="nav-item"><a class="nav-link" routerLink="/">Home </a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
     <li class="nav-item"><a class="nav-link" routerLink="/topo/add-topo" >Créer un topo</a></li>
     <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
     <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
@@ -17,6 +17,26 @@
     <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
 
   </ul>
+
+<!--  <div class="dropdown-menu" aria-labelledby="Admin">-->
+<!--    <a class="dropdown-item" href="#">Liste des utilisateurs</a>-->
+<!--  </div>-->
+
+<!--  <div class="dropdown-menu" aria-labelledby="Mon compte">-->
+<!--    <a class="dropdown-item" href="#">Mon profil</a>-->
+<!--    <div class="dropdown-divider"></div>-->
+<!--    <a class="dropdown-item" href="#">Gérer mes topos</a>-->
+<!--    <div class="dropdown-divider"></div>-->
+<!--    <a class="dropdown-item" href="#">Faire une demande de prêt</a>-->
+<!--  </div>-->
+
+<!--  <div class="dropdown-menu" aria-labelledby="Topos">-->
+<!--    <a class="dropdown-item" routerLink="/topo/add-topo">Créer un topo</a>-->
+<!--    <div class="dropdown-divider"></div>-->
+<!--    <a class="dropdown-item" href="#">Liste des topos</a>-->
+<!--    <div class="dropdown-divider"></div>-->
+<!--    <a class="dropdown-item" href="#">Rechercher un topo</a>-->
+<!--  </div>-->
 </nav>
 
 <router-outlet></router-outlet>
