--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -1,23 +1,60 @@
-
+<header>
 <div class="card-img-top">
   <img src="assets/img/banner.jpg" class="img-fluid" alt="Responsive image">
 </div>
+</header>
 
+<!--<nav class="navbar navbar-fixed-top navbar-dark bg-dark">-->
+<!--  <ul class="nav navbar-dark" routerLinkActive="active" a>-->
+<!--    <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>-->
 
-<nav class="navbar navbar-fixed-top navbar-dark bg-dark">
-  <ul class="nav navbar-dark" routerLinkActive="active" a>
-    <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/topo/add-topo" >Créer un topo</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/createArea">Créer un secteur</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/createRoad">Créer une voie</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/myprofil">Profil</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/home">Token</a></li>
+<!--    <li class="nav-item"><a class="nav-link" routerLink="/myprofil">Profil</a></li>-->
+<!--    <li class="nav-item"><a class="nav-link" routerLink="/home">Token</a></li>-->
 
-    <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>
+<!--    <li class="nav-item"><a class="nav-link" routerLink="/sign-in">S'identifier</a></li>-->
+<!--    <li class="nav-item"><a class="nav-link" routerLink="/createUser">Créer un compte</a></li>-->
+<!--  </ul>-->
+<!--</nav>-->
 
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/" href="#">Home</a>
+    </li>
+    <!-- Dropdown Mon compte -->
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="moncompte" data-toggle="dropdown">
+        Mon compte
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" routerLink="/myprofil">Mon profil</a>
+        <a class="dropdown-item" href="#">Ma liste de topo</a>
+      </div>
+    </li>
+    <!-- Dropdown Topo -->
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="topos" data-toggle="dropdown">
+        Topos
+      </a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" routerLink="/topo/add-topo">Créer un topo</a>
+        <a class="dropdown-item" routerLink="/viewTopos">Liste de topo</a>
+        <a class="dropdown-item" href="#">Rechercher de topo</a>
+      </div>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  routerLink="/sign-in" href="#">S'identifier</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link"  routerLink="/createUser" href="#">S'inscrire</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/" (click)="logout()">Se déconnecter</a>
+    </li>
   </ul>
 
+</nav>
 <!--  <div class="dropdown-menu" aria-labelledby="Admin">-->
 <!--    <a class="dropdown-item" href="#">Liste des utilisateurs</a>-->
 <!--  </div>-->
@@ -37,7 +74,6 @@
 <!--    <div class="dropdown-divider"></div>-->
 <!--    <a class="dropdown-item" href="#">Rechercher un topo</a>-->
 <!--  </div>-->
-</nav>
 
 <router-outlet></router-outlet>
 
