--- a/front/truespotFront/src/app/components/user/view-list-users/view-list-users.component.html
+++ b/front/truespotFront/src/app/components/user/view-list-users/view-list-users.component.html
@@ -30,7 +30,7 @@
                 <td>{{user.gender}}</td>
                 <td>{{user.email}}</td>
                 <td>{{user.phoneNumber}}</td>
-                <td>{{user.roles}}</td>
+                <td>{{user.roles[0].name}}</td>
                <td><button type="button" class="btn btn-secondary">Modifier les droits</button></td>
               </tr>
 
