--- a/front/truespotFront/src/app/components/home/home.component.html
+++ b/front/truespotFront/src/app/components/home/home.component.html
@@ -1,13 +1,25 @@
-<div *ngIf="info.token; else loggedOut">
-  <h5 class="text-primary">Your Information</h5>
-  <p>
-    <strong>Pseudo:</strong> {{info.pseudo}}<br/>
-    <strong>Roles:</strong> {{info.authorities}}<br />
-    <strong>Token:</strong> {{info.token}}
-  </p>
-  <button class="btn btn-secondary" (click)="logout()">Logout</button>
+
+
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-header badge-primary"><h3>Recherche :</h3></div>
+    <div class="card-body">
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+            <div class="row">
+              <select class="selectpicker" da>
+
+              </select>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
+
+
+
+
